UI + some logic

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
+    <script src="script.js" defer></script>
 </head>
-<body>
-    <div id="teste"></div>
-    <script src="script.js"></script>
+
+<body class="body">
+    <div class="firstPage">
+        <img id="mainPic" src="Images/mainpagepic.jpeg" alt="">
+        <h1>ROCK PAPER SCISSORS</h1>
+
+        <a href="game.html">Play</a>
+    </div>
+
 </body>
+
 </html>
