UI changes and game logic

--- a/game.html
+++ b/game.html
@@ -12,7 +12,8 @@
 </head>
 
 <body id="body2" class="body">
-    <div class="score" id="currentGame">RECENT GAME STAYS HERE</div>
+    <div class="score" id="currentGame">Recent game</div>
+    <div class="score" id="gameResult"></div>
     <div class="options">
         <div id="rock" class="option">
             <img src="Images/rock.jpeg" alt="">
